[project]
name = "riskprediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.11.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pgmpy>=1.0.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
]
